update access kho

--- a/public/css/pages/styleOrders.css
+++ b/public/css/pages/styleOrders.css
@@ -1,9 +1,8 @@
 
 .create-bill {
     width: 105px;
-    padding: 10px;
+    padding: 10px 8px;
     font-size: 14px;
-    font-weight: bold;
 }
 
 .header {
